--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -18,7 +18,7 @@
 @media (max-width: 1366px) {
   #about {
     .section-content {
-      max-width: 55%;
+      max-width: 45%;
     }
   }
 }
