--- a/scss/blocks/_basics.scss
+++ b/scss/blocks/_basics.scss
@@ -205,9 +205,13 @@ img {
 .section-img {
   height: 100%;
   position: absolute;
+  justify-content: flex-end;
   top: 0;
   right: 0;
   z-index: 3;
+  img {
+    height: 100%;
+  }
 }
 
 .section {
@@ -247,7 +251,7 @@ img {
       repeat: no-repeat;
       size: cover;
     }
-    z-index: 2;
+    z-index: 0;
   }
 }
 
