--- a/scss/blocks/_team.scss
+++ b/scss/blocks/_team.scss
@@ -11,6 +11,7 @@
   }
   .section-content {
     max-width: 350px;
+    margin-top: 100px;
   }
   .play-btn {
     position: absolute;
